# Qt-SNIC

./: CMakeLists.txt  CMakeUserPresets.json
include/: CustomGraphicsScene.h  CustomGraphicsView.h  CustomPolygonItem.h  CustomThread.h  ImageProcessor.h  MainWindow.h  PolygonManager.h  SegmentationResult.h  snicoptions.h  snicoptionsdialog.h
res/: main.qss  resources.qrc
src/: CustomGraphicsScene.cpp  CustomGraphicsView.cpp  CustomPolygonItem.cpp  CustomThread.cpp  ImageProcessor.cpp  MainWindow.cpp  PolygonManager.cpp  SegmentationResult.cpp  WorkerThread.cpp  main.cpp  snicoptionsdialog.cpp
